# dependency-tree-svg

./: .gitignore  Cargo.toml  README.md  data.json  package.json
assets/: grid.test.ts  grid.ts  main.ts  registry.test.ts  registry.ts  state.test.ts  state.ts  svg.ts  tests.ts  ui.ts
src/: assets.rs  input.rs  lib.rs
