[package]
name = "dependency-tree-svg"
version = "0.1.2"
edition = "2021"
include = [
    "/src/**/*.rs",
    "/assets/output.js",
    "/assets/main.svg",
    "/Cargo.toml",
    "/README.md",
]
license = "MIT"
description = "a package to generate a self-contained interactive SVG file from a dependency graph"

[dependencies]
lexopt = { version = "0.3.0", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
bench = false
name = "run"
required-features = ["lexopt"]
test = false
